--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
   color: var(--main-p-bottom-color);
 }
 .footer {
-  padding: 100px 100px;
+  padding: 100px 0;
 }
 .footer-text {
   line-height: 1.5;
